[package]
name = "rust-set-reconciliation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
hex = "0.4.3"
proptest = "1.0.0"
rand = "0.8.5"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
